PYIC-5082: Store document identifier on CimitStubItem
This commit ensures we're storing a document identifier against each CI
recieved that is linked to a passport or a driving permit.

It also makes a few refactorings including:

* Removing gson
* Modeling the VC claimas domain objects
* Renaming a few things to improve readability
* Creating a new method on the CimitStubItemSerice to avoid having to
  recreate objects